# monseri

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
monseri/: CMakeLists.txt  Doxyfile  README.md
monseri/include/: attorney.h  make_shared_cpp11.h  registration_macros.h  serializable.h  serialization.h  storage.h  type_factory.h  type_registry.h
monseri/include/iostream_storage/: iostream_read_storage.h  iostream_write_storage.h  shift_operators.h
